# llm-honesty-eval

./: .env.example  .gitignore  Makefile  Makefile_old  README.md  pyproject.toml
common/: __init__.py  config.py  evaluator.py
config/: config.yaml  models.yaml  prompts.yaml
scripts/: basic_evaluation.py  batch_evaluation.py  compare_models.py  experiment_prompts.py
src/llm_honesty_eval/: __init__.py  cli.py  config.py  evaluator.py  logging_config.py  models.py
tests/: __init__.py  test_config.py  test_evaluator.py  test_integration.py
tests/fixtures/: sample_responses.py
